welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:37: error: type mismatch;
 found   : Unit
 required: Boolean
			if (getDirection == Direction.OUEST)
                        ^