welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
 baisseBrosse()
 while (arrive() != true) 
 {
 	if (!estFaceMur())
 	  {avance()}
 	 else {if (getDirection == Direction.EST)
 	 		{ gauche()
 	 			if (!estFaceMur())
 	 			  {avance();gauche()}
 	 		}
 	 	   else {droite; if (!estFaceMur())
 	 	   				{avance();droite()}
 	 	   }}
 }
}


def arrive():Boolean = {
	if (estFaceMur())
	{ 
		if (getDirection() == Direction.EST)
		{
			gauche()
			if (estFaceMur())
			{ 
				droite()
				return true
			}
			else {
				droite()
				return false
			}
		}
		else { 
			if (getDirection == Direction.OUEST)
			{
				droite()
				if (estFaceMur())
				{
					gauche()
					return true
				}
				else {
					gauche()
					return false
				}
			}
		}
	}
	else {
		return false
	}
}
